--- a/sayba-app2/package.json
+++ b/sayba-app2/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "moment" : "^2.24.0"
+    "moment": "^2.24.0",
+    "node-sass": "^4.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
