--- a/sayba-app2/package.json
+++ b/sayba-app2/package.json
@@ -15,7 +15,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
